...
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/usernameHint"
        android:id="@+id/uname"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textColorHint="@color/primary_dark_material_light" />

    <EditText
...
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:typeface="serif"
        android:textColorHint="@color/primary_dark_material_light"
        android:id="@+id/pword"
        android:layout_above="@+id/login"
        android:layout_alignStart="@+id/uname"
        android:layout_alignLeft="@+id/uname"
        android:layout_marginBottom="41dp"
        android:textColor="@color/white" />

    <ProgressBar
...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logoText"
        style="@style/Base.V21.Theme.AppCompat"
        android:id="@+id/name"
        android:textColor="@color/logo_color"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/icon"
        android:layout_centerHorizontal="true" />

...
