...
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotoVocab"
        android:id="@+id/vocab"
        android:textSize="18sp"
        android:background="#ff6c303c"
        android:textAllCaps="false"
        android:onClick="gotoVocab"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/icon"
...
        android:layout_alignEnd="@+id/icon" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matchFriend"
        android:id="@+id/friends"
        android:textSize="18sp"
        android:background="#ffb39a6d"
        android:layout_marginTop="31dp"
        android:textAllCaps="false"
        android:onClick="goMatchWithFriend"
        android:layout_below="@+id/userquiz"
...
        android:layout_alignEnd="@+id/icon" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matchLadder"
        android:id="@+id/ladder"
        android:textSize="18sp"
        android:background="#ff809e6d"
        android:layout_below="@+id/friends"
        android:layout_alignStart="@+id/friends"
        android:layout_marginTop="43dp"
        android:textAllCaps="false"
...
